Fixed alignment of newsletter form

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -205,7 +205,7 @@
   }
 
   .footer-block__newsletter:not(:only-child) .footer__newsletter {
-    justify-content: flex-start;
+    /*justify-content: flex-start;*/
     margin: 0;
   }
 }
